--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 
 <body>
   <div class="card-container">
-    <h1>◆ Jacky 31th Birthday ◆</h1>
+    <h1>◆ GJ 31th Birthday ◆</h1>
 
     <p>祝你生日快樂！</p>
     <p>今年也要好好照顧自己，</p>
     <p>保持快樂、平安順心。</p>
     <p>新的一歲，有我在這裡替你加油。</p>
 
-    <p>Happy 31st, Jacky ✨</p>
+    <p>Happy 31st ✨</p>
 
-    <div class="footer">— End of message —</div>
+    <div class="footer">— A Little Birthday Message —</div>
   </div>
 </body>
 </html>
