--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
 <script>
   // ★ 這裡放所有要打字顯示的內容 ★
   const fullText = 
-`GJ 31th Birthday...
+`GJ's 31th Birthday...
 
 嗨寶貝！
 又和你一起度過另一個年頭。
 
 喜歡和你一起吃喝、一起看電視、
 一起逛超市、一起調皮、
-一起什麼都不做、一起感受世界上的美。
+一起睡不著、一起什麼都不做、
+一起感受世界上的美。
 
 自從你搬進來以後，
 生活裡有了更多的「我們」。
@@ -63,14 +64,15 @@
 有你在真的很安心。
 
 祝你生日快樂！
-今年也要好好照顧自己、彼此、
-朋友、家人。
+今年也要好好照顧自己、彼此、朋友、家人
+順便顧一下貓、螞蟻、鼠婦與花草。
 保持快樂，平安順心。
 
 新的一歲，有我在這裡。
 
-----------------------------------------
-A Little Birthday Message
+2025 Nov. 杰
+-----------------------------
+A Little Birthday Message <3
 `;
 
   const speed = 55; // 打字速度（毫秒）
