--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 有你在真的很安心。
 
 祝你生日快樂！
-今年也要好好照顧自己、彼此、朋友、家人
-順便顧一下貓、螞蟻、鼠婦與花草。
+今年也要好好照顧自己！
+照顧彼此、朋友、家人，
+也順便顧一下貓、螞蟻、鼠婦與花草。
 保持快樂，平安順心。
 
 新的一歲，有我在這裡。
@@ -75,7 +76,7 @@
 A Little Birthday Message <3
 `;
 
-  const speed = 55; // 打字速度（毫秒）
+  const speed = 75; // 打字速度（毫秒）
   let i = 0;
   const output = document.getElementById("typewriter");
 
