--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
   // ★ 這裡放所有要打字顯示的內容 ★
   const fullText = 
 `GJ's 31th Birthday...
+----------------------------
 
-嗨寶貝！
+嗨傑寶貝！
 又和你一起度過另一個年頭。
 
 喜歡和你一起吃喝、一起看電視、
@@ -71,8 +72,8 @@
 
 新的一歲，有我在這裡。
 
-2025 Nov. 杰
------------------------------
+2025 Nov. 丞杰
+----------------------------
 A Little Birthday Message <3
 `;
 
