--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 
 自從你搬進來以後，
 生活裡有了更多的「我們」。
-你總是讓我感受到
-內在與外在的穩定感，
+你總是讓我感受到發自內心的穩定感，
 有你在真的很安心。
 
 祝你生日快樂！
@@ -70,7 +69,7 @@
 也順便顧一下貓、螞蟻、鼠婦與花草。
 保持快樂，平安順心。
 
-新的一歲，有我在這裡。
+新的一歲，有我在這裡喔。
 
 2025 Nov. 丞杰
 ----------------------------
