--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     background: #000;
     color: #00ff6a;
     font-family: "Courier New", monospace;
-    padding: 20px;
+    padding: 10px 20px;
     display: flex;
     justify-content: center;
   }
