--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     background: #000;
     color: #00ff6a;
     font-family: "Courier New", monospace;
-    padding: 5px 20px;
+    padding: 20px;
     display: flex;
     justify-content: center;
   }
@@ -18,7 +18,7 @@
     border: 2px solid #00ff6a;
     max-width: 650px;
     width: 100%;
-    padding: 20px;
+    padding: 5px 20px;
     box-sizing: border-box;
     line-height: 1.7;
     font-size: 1.15rem;
@@ -64,12 +64,12 @@
 有你在真的很安心。
 
 祝你生日快樂！
-今年也要好好照顧自己！
+今年也要好好照顧自己、
 照顧彼此、朋友、家人，
-也順便顧一下貓、螞蟻、鼠婦與花草。
+順便顧貓、螞蟻、鼠婦與花草。
 保持快樂，平安順心。
 
-新的一歲，有我在這裡喔。
+新的一歲，有我在這裡。
 
 2025 Nov. 丞杰
 ----------------------------
