--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     border: 2px solid #00ff6a;
     max-width: 650px;
     width: 100%;
-    padding: 5px 20px;
+    padding: 20px;
     box-sizing: border-box;
     line-height: 1.7;
     font-size: 1.15rem;
@@ -54,7 +54,7 @@
 又和你一起度過另一個年頭。
 
 喜歡和你一起吃喝、一起看電視、
-一起逛超市、一起調皮、
+一起逛超市、一起調皮耍寶、
 一起睡不著、一起什麼都不做、
 一起感受世界上的美。
 
