--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 <script>
   // ★ 這裡放所有要打字顯示的內容 ★
   const fullText = 
-`GJ's 31th Birthday...
+`GJ's 31th Birthday :D
 ----------------------------
 
 嗨傑寶貝！
 又和你一起度過另一個年頭。
 
-喜歡和你一起吃喝、一起看電視、
+喜歡和你一起吃喝、看電視、
 一起逛超市、一起調皮耍寶、
 一起睡不著、一起什麼都不做、
 一起感受世界上的美。
